--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -8,11 +8,6 @@ We will use the statistical analysis software R in this course with the interfac
 
 A key focus on this course is training you in a workflow that will avoid a large number of problms than can occur when using R.
 
-#### Create an account at R Studio Cloud
-
-R Studio Cloud accounts are free and required for this course. Please go to the website and set up a new account using your university email address.
-
-
 ## R works with plug-in / add-ons
 
 R is a statistical language with many plug-ins called **packages** that you will use to do analyses. You can think of R as being like your smartphone. To do things with your phone you need **an App** (R equivalent is a *package*). Before you can use the App you need to **download**  it (R equivalent is to *install.packages*) from the **App Store** (R equivalent is the *CRAN*). To use the app you need **Open** it  (R equivalent is the *library command*). These similarities are illustrated in the table below.
@@ -21,9 +16,12 @@ R is a statistical language with many plug-ins called **packages** that you will
 knitr::include_graphics("first_time/images/smartphone_analogy.png")
 ```
 
+## Create an account at R Studio Cloud
+
+R Studio Cloud accounts are free and required for this course. Please go to the website and set up a new account using your university email address.
 
 
-#### Join the class workspace
+## Join the class workspace
 
 You need to join the class workspace to access class materials. 
 
@@ -36,19 +34,15 @@ To do so:
 INSERT IMAGE HERE OF JOIN SCREEN
 
 
-#### Start the first lab
-
-
-
 ## Exploring the R Studio Interface
 
 
-#### File/Plot Window
+### File/Plot Window
 
 Picture with arrow
 
 
-#### Console Window
+### Console Window
 
 Notice the we can use R a bit like a calculator. 
 
@@ -60,7 +54,7 @@ knitr::include_graphics("first_time/images/console.png")
 Picture with arrow
 
 
-#### Script Window
+### Script Window
 
 Create a script in your R Studio project by using the menu File > New File > R Script.
 Save the file with an appropriate name. A common, and good, convention is to start all script names with the word "script" and separate words with an underscore "_". You might save this file with the name "script_my_first_one.R". The advantage of this approach is that when you look at your list of files alphabetically, all the script files will cluster together. Likewise, it's a good idea to save all data files such that they begin with "data_". This way all the data files will cluster together in your directory view as well.. You can see there is already a data file with this convention called "data_okcupid.csv". You can see as discussed prevously, we are trying to instill and effect workflow as you learn R.
@@ -68,7 +62,7 @@ Save the file with an appropriate name. A common, and good, convention is to sta
 
 ## Writing your first script
 
-#### Add a comment with today's date
+### Add a comment with today's date
 
 It's a good idea to add a comment with the date of your script. Like smartphone apps, packages are updated regularly. Sometimes when a package is updated it will no longer work with an older script. Fortunately, the **checkpoint** package let's users role back the clock and user older versions of packages. Adding a comment with the date of your script will help future users (including you) to use your script with the same version of the package (if needed). This won't be relevant to what we do in this course - but it is good practice. This is another important workflow tip.
 
@@ -77,7 +71,7 @@ It's a good idea to add a comment with the date of your script. Like smartphone 
 ```
 
 
-#### Add library(tidyverse) to your script 
+### Add library(tidyverse) to your script 
 
 Now put the line below at the top of your script file:
 
@@ -91,7 +85,7 @@ knitr::include_graphics("first_time/images/script_tidyverse.png")
 
 
 
-#### Activate tidyverse auto-complete for your script
+### Activate tidyverse auto-complete for your script
 
 Select the library(tidyverse) text with your mouse/track-pad and highlight it. Then click the Run button in the upper right of the script window.
 
@@ -106,7 +100,7 @@ Running the library(tidyverse) prior to entering the rest of your script allows 
 
 ## Loading your data
 
-#### Use read_csv (not read.csv) to open the file. 
+### Use read_csv (not read.csv) to open the file. 
 
 If you followed the steps above, you should have auto-complete for the tidyverse. This means you should see an auto-complete option for read_csv. Be sure to use read_csv not read.csv. The use of the _ indicates we are using the command from the tidyverse package.
 
@@ -137,7 +131,7 @@ my_data <- read_csv(file = "data_okcupid_heights.csv",
 
 This text indicates that you have loaded a data file with two columns named sex and height. The sex column is of type col_character which indicates it contains text/letters. The height column is of type col_double which merely indicates that it is a column of numbers represented with high precision (double indicates it is high precision - technical description of exactly what is meant by double is left for a computer science course).
 
-#### Missing values and read_csv
+### Missing values and read_csv
 
 Tell people how to identify missing values when they load their data.
 
@@ -145,11 +139,11 @@ Tell people how to identify missing values when they load their data.
 
 ## Getting your data ready for analysis
 
-#### Make sure you are using well-formatted variable names
+### Make sure you are using well-formatted variable names
 
 Janitor package here..
 
-#### Tell R which variables are categorical (i.e., a factor)
+### Tell R which variables are categorical (i.e., a factor)
 
 A key part of using R is telling it which variables are categorical variables. If you don't do this some analysis won't run. Worse - other analyses will run but provide the wrong numbers.
 
@@ -183,7 +177,7 @@ glimpse(my_data)
 
 ## Checking out the structure of your data
 
-#### glimpse(): A way to check out your data structure
+### glimpse(): A way to check out your data structure
 
 Check out the structure of the data with the glimpse command. Add the command below to your script file, highlight it, and click Run.
 
@@ -203,7 +197,7 @@ names(my_data)
 ```
 
 
-#### head(): Check out the first few rows 
+### head(): Check out the first few rows 
 
 You can see the first few rows of the data with the head command. Add the command below to your script file, highlight it, and click Run.
 
@@ -211,7 +205,7 @@ You can see the first few rows of the data with the head command. Add the comman
 head(my_data)
 ```
 
-#### tail(): Check out the last few rows 
+### tail(): Check out the last few rows 
 
 You can see the last few rows of the data with the head command. Add the command below to your script file, highlight it, and click Run.
 
@@ -219,7 +213,7 @@ You can see the last few rows of the data with the head command. Add the command
 tail(my_data)
 ```
 
-#### view(): See a spreadsheet view of your data
+### view(): See a spreadsheet view of your data
 
 You can view the data in a spreadsheet style window using the command below.
 
@@ -229,7 +223,7 @@ Do NOT add this command to your script file. Just type it in the Console. Adding
 view(my_data)
 ```
 
-#### summary(): Quick summaries
+### summary(): Quick summaries
 
 You can a short summary of your data with the summary() command. Note that we will use the summary command in many places in the course. The output of the summary command changes depending on what you give it (data, regression results, etc). Add the command below to your script file, highlight it, and click Run.
 
@@ -250,7 +244,7 @@ knitr::include_graphics("first_time/images/script_all.png")
 ```
 
 
-#### Run
+### Run
 
 The Run button will run the text you highlight and present the relevant output. You have used this command a fair amount above.
 
@@ -258,7 +252,7 @@ I strongly suggest you ONLY use the Run button when testing a command to make su
 
 In general, you should always try to execute your R Scripts using the Source with Echo command (preceded by a Restart, see below). This ensures your script will work beginning to end for you in the future and for others that attempt to use it. Using the Run button in an ad lib basis can create output that is not reproducible.
 
-#### Source (without Echo)
+### Source (without Echo)
 
 Source (without Echo) is not designed for the typical analysis workflow. It is mostly helpful when you run simulations. You can see below that when you run Source (without Echo) much of the output you would wish to read is suppressed.
 
@@ -278,7 +272,7 @@ $ height <dbl> 75, 70, 68, 71, 66, 67, 65, 70, 72, 72, 70, 71, 72, 69, 71, 73, 7
 ```
 
 
-#### Source with Echo
+### Source with Echo
 
 The Source with Echo command runs all of the contents of a script and presents the output in the R console.
 
@@ -341,7 +335,7 @@ $ height <dbl> 75, 70, 68, 71, 66, 67, 65, 70, 72, 72, 70, 71, 72, 69, 71, 73, 7
                     Max.   :80.00  
 ```
 
-#### Source: Use Session > Restart R EVERY time before you click Source
+### Source: Use Session > Restart R EVERY time before you click Source
 
 Avoid a large number of problems, prior to using the Source button, go to **Session > Restart R**.
 
@@ -353,11 +347,11 @@ Do **Session > Restart R** before click source -- **ALWAYS**.
 
 ## A few analyses with scripts and Source with Echo
 
-#### select(): Obain a subset of columns
+### select(): Obain a subset of columns
 
-#### filter(): Obtain a subset of rows
+### filter(): Obtain a subset of rows
 
-#### summarise(): Obtain summary statistics for a column
+### summarise(): Obtain summary statistics for a column
 
 
 
@@ -366,27 +360,27 @@ Do **Session > Restart R** before click source -- **ALWAYS**.
 
 I suggest you do the following things to avoid problems in your scripts
 
-#### Source: Use Session > Restart R EVERY time before you click Source
+### Source: Use Session > Restart R EVERY time before you click Source
 
 As noted above, prior to using the Source button, go to Session > Restart R.
 
 This ensure each script runs in a fresh environment.
 
-#### Avoid View() in your scripts
+### Avoid View() in your scripts
 
 Depending on your version of R Studio, putting View() in your scripts can cause problems. Try to restrict use of View to the Console window.
 
 
-#### Package Installation Advice
+### Package Installation Advice
 
 In the first part of the course, the package will be installed for you. To use those package you will merely need to activate them with the library command. Later in the course you will install your packages. When you do so there a few things you need to keep in mind to avoid problems:
 
 
-###### Do NOT put install.package() commands in your scripts
+#### Do NOT put install.package() commands in your scripts
 
 Try to avoid putting install.package commands in your scripts. Doing so can corrupt your R installation. You may need to re-install R if you do so. Worse, you may create problems on your computer so that even re-installing R won't get it working again. As discussed above, install.packages commands in scripts are problematic because they often follow library commands. When this happen your R installation becomes corrupted.
 
-###### install.packages: Use Session > Restart R EVERY time before you install.packages
+#### install.packages: Use Session > Restart R EVERY time before you install.packages
 
 Prior to using install.packages, go to Session > Restart R.
 
@@ -436,7 +430,7 @@ print(my_tibble)
 
 In short you should always use tibbles (i.e., use read_csv) - they are simply enhanced data frames (i.e., the new version of the data frame). The differences between data frames and tibbles run deeper than the superficial output provided here. On some rare occasions an old package or command may not work with a tibble so you need to make it a data frame. You can do so with the commands below:
 
-###### Converting a tibble into a data frame
+#### Converting a tibble into a data frame
 
 ```{r}
 new_dataframe <- as.data.frame(my_tibble)
@@ -492,7 +486,7 @@ We can obtain the second item in the vector using the following notation:
 print(favourite_things[2])
 ```
 
-###### Using character vectors with a command
+### Using character vectors with a command
 
 Previously, we used a vector to indicate what codes represent missing values:
 
@@ -521,7 +515,7 @@ my_data <- read_csv(file = "data_okcupid_heights.csv",
 ```
 
 
-#### Lists
+### Lists
 
 Lists are similar to vectors in that you can create them and access items by their numeric position. Vectors must be all characters or all numbers. Lists can be a mix of characters or numbers. Most importantly items in lists can be accessed by their label.
 
