--- a/packages.bib
+++ b/packages.bib
@@ -10,14 +10,14 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2020},
-  note = {R package version 0.19},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  note = {R package version 0.19.1},
+  url = {https://github.com/rstudio/bookdown},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2020},
-  note = {R package version 0.8.5},
+  note = {R package version 1.0.0},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 @Manual{R-forcats,
