--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -1,15 +1,15 @@
 \mainmatter
 
 # Introduction
-We will use the statistical analysis software R in this course with the interface provided by R Studio. We can access R Studio using the website [R Studio Cloud](http://www.rstudio.cloud).
+We will use the statistical analysis software R in this course with the interface provided by R Studio. You can access R Studio using the website [R Studio Cloud](http://www.rstudio.cloud).
 
 ## A focus on workflow
 
-A key focus on this course is training you in a workflow that will avoid a large number of problms than can occur when using R.
+A key focus on this course is training you in a workflow that will avoid a large number of problems than can occur when using R.
 
 ## R works with plug-in / add-ons
 
-R is a statistical language with many plug-ins called **packages** that you will use to do analyses. You can think of R as being like your smartphone. To do things with your phone you need **an App** (R equivalent is a *package*). Before you can use the App you need to **download**  it (R equivalent is to *install.packages*) from the **App Store** (R equivalent is the *CRAN*). To use the app you need **Open** it  (R equivalent is the *library command*). These similarities are illustrated in Table \@ref(tab:appstore) below.
+R is a statistical language with many plug-ins called **packages** that you will use for analyses. You can think of R as being like your smartphone. To do things with your phone you need **an App** (R equivalent: a *package*). Before you can use the App you need to **download**  it (R equivalent: *install.packages*) from the **App Store** (R equivalent: *CRAN*). To use the app you need **Open** it  (R equivalent:  *library command*). These similarities are illustrated in Table \@ref(tab:appstore) below.
 
 
 ```{r appstore, echo = FALSE}
@@ -28,15 +28,29 @@ R Studio Cloud accounts are free and required for this course. Please go to the 
 
 ## Join the class workspace
 
-You need to join the class workspace to access class materials. 
-
-To do so:
+You need to join the class workspace to access class materials. To do so:
 
 1. Log into R Studio Cloud (if you haven't already done so).
-2. Go to your email and find the message were you will emailed the link to the class R Studio workspace.
-3. Click on that link or paste it into your web browser. You should see a screen like the one below. Click join.
 
-INSERT IMAGE HERE OF JOIN SCREEN
+2. Go to your university email account and find the message were you will emailed the link to the class R Studio workspace. The email will have the subject "R Studio Workspace Invitation".
+
+3. Click on that the link in the email or paste it into your web browser. You should see a screen like the one below in Figure \@ref(fig:join). Click on the Join button.
+
+```{r join, fig.cap="Screenshot of join message", echo = FALSE, out.width="85%"}
+knitr::include_graphics("first_time/images/screenshot_join.png")
+```
+
+4. Then you should see the welcome message illustrated in Figure \@ref(fig:welcome). Above this message is the Projects menu option. Click on the word Project.
+
+```{r welcome, fig.cap="Screenshot of welcome messag", echo = FALSE, out.width="85%"}
+knitr::include_graphics("first_time/images/screenshot_welcome.png")
+```
+
+5. You should now see the First Project displayed as in \@ref(fig:assignment). Click the Start button. You will then move to a view of R Studio.
+
+```{r assignment, fig.cap="Screenshot of starting first assignment", echo = FALSE, out.width="85%"}
+knitr::include_graphics("first_time/images/screenshot_assignment.png")
+```
 
 
 ## Exploring the R Studio Interface
@@ -62,7 +76,7 @@ Picture with arrow
 ### Script Window
 
 Create a script in your R Studio project by using the menu File > New File > R Script.
-Save the file with an appropriate name. A common, and good, convention is to start all script names with the word "script" and separate words with an underscore "_". You might save this file with the name "script_my_first_one.R". The advantage of this approach is that when you look at your list of files alphabetically, all the script files will cluster together. Likewise, it's a good idea to save all data files such that they begin with "data_". This way all the data files will cluster together in your directory view as well.. You can see there is already a data file with this convention called "data_okcupid.csv". You can see as discussed prevously, we are trying to instill and effect workflow as you learn R.
+Save the file with an appropriate name. A common, and good, convention is to start all script names with the word "script" and separate words with an underscore "_". You might save this file with the name "script_my_first_one.R". The advantage of this approach is that when you look at your list of files alphabetically, all the script files will cluster together. Likewise, it's a good idea to save all data files such that they begin with "data_". This way all the data files will cluster together in your directory view as well.. You can see there is already a data file with this convention called "data_okcupid.csv". You can see as discussed previously, we are trying to instill and effect workflow as you learn R.
 
 
 ## Writing your first script
