--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "A Chapman & Hall/CRC Book Example Using bookdown"
-author: "Frida Gomam"
+title: "PSYC6060 Course Notes"
+author: "David J. Stanley"
 date: "`r Sys.Date()`"
 documentclass: krantz
 bibliography:
@@ -12,8 +12,8 @@ colorlinks: yes
 lot: yes
 lof: yes
 site: bookdown::bookdown_site
-description: A book example for a Chapman & Hall book.
-github-repo: yihui/bookdown-crc
+description: Course notes for PSYC 6060
+github-repo: dstanley4/psyc6060bookdown
 graphics: yes
 ---
 
@@ -39,20 +39,6 @@ It is very important...
 ## Structure of the book {-}
 
 Chapters \@ref(introduction) introduces a new topic, and ...
-
-We have a nice figure in Figure \@ref(fig:hello2), and also a table in Table \@ref(tab:iris2).
-
-```{r hello2, fig.cap='Hello World!', out.width='90%'}
-par(mar = c(4, 4, 1, .1))
-plot(cars, pch = 19)
-```
-
-```{r iris2}
-knitr::kable(
-  head(iris), caption = 'The boring iris data.',
-  booktabs = TRUE
-)
-```
 
 ## Software information and conventions {-}
 
