ipad test commit

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -1,7 +1,8 @@
 \mainmatter
 
 # Introduction
-We will use the statistical analysis software R in this course with the interface provided by R Studio. You can access R Studio using the website [R Studio Cloud](http://www.rstudio.cloud).
+
+Welcome to PSYC6060! In this course, we will use the statistical analysis software R in this course with the interface provided by R Studio. You can access R Studio using the website [R Studio Cloud](http://www.rstudio.cloud).
 
 ## A focus on workflow
 
