minor fix to text

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -2,11 +2,11 @@
 
 # Introduction
 
-Welcome to PSYC6060! In this course, we will use the statistical analysis software R in this course with the interface provided by R Studio. You can access R Studio using the website [R Studio Cloud](http://www.rstudio.cloud).
+Welcome to PSYC6060! In this course, we will use the statistical software R with the interface provided by R Studio. You can access R Studio using the website [R Studio Cloud](http://www.rstudio.cloud).
 
 ## A focus on workflow
 
-A key focus on this course is training you in a workflow that will avoid a large number of problems than can occur when using R.
+An important part of this course is training you in a workflow that will avoid a large number of problems than can occur when using R.
 
 ## R works with plug-in / add-ons
 
