--- a/latex/before_body.tex
+++ b/latex/before_body.tex
@@ -6,9 +6,9 @@
 \thispagestyle{empty}
 
 \begin{center}
-To my son,
+To my students,
 
-without whom I should have finished this book two years earlier
+from whom I've learn so much about teaching.
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
