--- a/index.Rmd
+++ b/index.Rmd
@@ -30,15 +30,11 @@ lapply(c('xfun'), function(pkg) {
 
 # Preface {-}
 
-Hi there, this is my great book.
-
-## Why read this book {-}
-
-It is very important...
+R's emerging role in psychology will be described here..
 
 ## Structure of the book {-}
 
-Chapters \@ref(introduction) introduces a new topic, and ...
+I'll put more about the structure of the book here in the future.
 
 ## Software information and conventions {-}
 
@@ -49,13 +45,3 @@ xfun::session_info()
 ```
 
 Package names are in bold text (e.g., **rmarkdown**), and inline code and filenames are formatted in a typewriter font (e.g., `knitr::knit('foo.Rmd')`). Function names are followed by parentheses (e.g., `bookdown::render_book()`).
-
-## Acknowledgments {-}
-
-A lot of people helped me when I was writing the book.
-
-```{block2, type='flushright', html.tag='p'}
-Frida Gomam  
-on the Mars
-```
-
