--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -29,7 +29,7 @@ R Studio Cloud accounts are free and required for this guide. Please go to the w
 
 ## Join the class workspace
 
-To do the assignment required for this class you need to join the class workspace on R Studio Cloud. To do so:
+To do the assignment required for this class you need to join the class workspace on R Studio Cloud\index{R Studio Cloud}. To do so:
 
 1. Log into R Studio Cloud (if you haven't already done so).
 
@@ -37,20 +37,20 @@ To do the assignment required for this class you need to join the class workspac
 
 3. Click on that the link in the email or paste it into your web browser. You should see a screen like the one below in Figure \@ref(fig:join). Click on the Join button.
 
-```{r join, fig.cap="Screenshot of join message", echo = FALSE, out.width="70%"}
-knitr::include_graphics("first_time/images/screenshot_join.png")
+```{r join, fig.cap="Screen shot of workspace join message.", echo = FALSE, out.width="70%"}
+knitr::include_graphics("ch_first_time/images/screenshot_join.png")
 ```
 
 4. Then you should see the welcome message illustrated in Figure \@ref(fig:welcome). Above this message is the Projects menu option. Click on the word Project.
 
-```{r welcome, fig.cap="Screenshot of welcome messag", echo = FALSE, out.width="70%"}
-knitr::include_graphics("first_time/images/screenshot_welcome.png")
+```{r welcome, fig.cap="Screen shot of welcome messag", echo = FALSE, out.width="70%"}
+knitr::include_graphics("ch_first_time/images/screenshot_welcome.png")
 ```
 
 5. You should now see the First Project displayed as in \@ref(fig:assignment). Click the Start button. You will then move to a view of R Studio.
 
-```{r assignment, fig.cap="Screenshot of starting first assignment", echo = FALSE, out.width="70%"}
-knitr::include_graphics("first_time/images/screenshot_assignment.png")
+```{r assignment, fig.cap="Screen shot of starting first assignment", echo = FALSE, out.width="70%"}
+knitr::include_graphics("ch_first_time/images/screenshot_assignment.png")
 ```
 
 
@@ -59,7 +59,7 @@ knitr::include_graphics("first_time/images/screenshot_assignment.png")
 Once you have created a Project, you are presented with the R Studio interface. There are a few key elements to the user interface that are illustrated in Figure \@ref(fig:interface) In the lower right of the screen you can see the a panel with several tabs (i.e., Files, Plots, Packages, etc) that I will refer to as the Files pane. You look in this pane to see all the files associated with your project. On the left side of the screen is the Console which is an interactive pane where you type and obtain results in real time. I've placed two large grey blocks on the screen with text to more clearly identify the Console and Files panes. Not shown in this figure is the Script panel where we can store our commands for later reuse.
 
 ```{r interface, fig.cap = "R Studio interface", echo = FALSE, out.width="70%"}
-knitr::include_graphics("first_time/images/screenshot_interface.png")
+knitr::include_graphics("ch_first_time/images/screenshot_interface.png")
 ```
 
 ### Console panel
@@ -101,14 +101,14 @@ Create a script in your R Studio project by using the menu File > New File > R S
 
 Save the file with an appropriate name using the File menu. A common, and good, convention for naming is to start all script names with the word "script" and separate words with an underscore. You might save this file with the name "script_my_first_one.R". The advantage of this approach is that when you look at your list of files alphabetically, all the script files will cluster together. Likewise, it's a good idea to save all data files such that they begin with "data_". This way all the data files will cluster together in your directory view as well. You can see there is already a data file with this convention called "data_okcupid_heights.csv". 
 
-You can see as discussed previously, we are trying to instill and effect workflow as you learn R. Using a good naming convention (that is consistent with what others use) is part of the workflow. When you write your scripts it's a good idea to follow the [Tidyverse Style Guide](https://style.tidyverse.org).
+You can see as discussed previously, we are trying to instill and effect workflow as you learn R. Using a good naming convention (that is consistent with what others use) is part of the workflow. When you write your scripts it's a good idea to follow the [tidyverse style guide](https://style.tidyverse.org).
 
 
 ### Add a comment to your script
 
 In the previous section you created your first script. We begin by adding a comment to the script. A comment is something that will be read by humans rather than the computer/R. You make comments for other people that will read your code and need to understand what you have done. However, realize that you are also making comments for your future self as illustrated in an [XKCD cartoon](https://xkcd.com/1421/). 
 
-A good way to start every script is with a comment that includes the date of your script (or even better when you installed your packages, more on this later). Like smartphone apps, packages are updated regularly. Sometimes when a package is updated it will no longer work with an older script. Fortunately, the [checkpoint package](https://cran.r-project.org/web/packages/checkpoint/index.html) lets users role back the clock and use older versions of packages. Adding a comment with the date of your script will help future users (including you) to use your script with the same version of the package you used when you wrote the script. Dating your script is an important part of an effective and reproducible workflow.
+A good way to start every script is with a comment that includes the date of your script (or even better when you installed your packages, more on this later). Like smartphone apps, packages are updated regularly. Sometimes when a package is updated it will no longer work with an older script. Fortunately, the [checkpoint package](https://cran.r-project.org/web/packages/checkpoint/index.html)\index{R Studio Cloud} lets users role back the clock and use older versions of packages. Adding a comment with the date of your script will help future users (including you) to use your script with the same version of the package you used when you wrote the script. Dating your script is an important part of an effective and reproducible workflow.
 
 
 ```{r}
@@ -116,14 +116,14 @@ A good way to start every script is with a comment that includes the date of you
 # By: John Smith
 ```
 
-Note that in the above comment I used the internationally accepted date format order Year/Month/Day. Some people use the mnemonic *Your My Dream* to remember this order. Wikipedia provides more information about the [International Date Format ISO 8601](https://en.wikipedia.org/wiki/ISO_8601).
+Note that in the above comment I used the internationally accepted date format\index{date format} order Year/Month/Day. Some people use the mnemonic *Your My Dream* to remember this order. Wikipedia provides more information about the [International Date Format ISO 8601](https://en.wikipedia.org/wiki/ISO_8601).
 
 
 Moving forward, I suggest you use comments to make your own personal notes in your own code as your write it.
 
 ### Background about the tidyverse
 
-One modern approach is using R is the tidyverse. The tidyverse represents not a single package but rather a collection of packages the work together to give R a modern workflow. These packages do many things to help the data analyst (graphing, rearranging data etc.). That is, each of these packages adds new commands to R. A current list of the packages in the tidyverse is below:
+One modern approach is using R is the tidyverse\index{tidyverse}. The tidyverse represents not a single package but rather a collection of packages the work together to give R a modern workflow. These packages do many things to help the data analyst (graphing, rearranging data etc.). That is, each of these packages adds new commands to R. A current list of the packages in the tidyverse is below:
 
 ```{r, echo = FALSE}
 tidyverse::tidyverse_packages(include_self = TRUE)
@@ -250,9 +250,9 @@ You can inspect the first few rows of your data with the head() command. Try the
 head(okcupid_profiles)
 ```
 
-### tail(): Check out the first few rows of data 
+### tail(): Check out the last few rows of data 
 
-You can inspect the first few rows of your data with the head() command. Try the tail() command below in the Console:
+You can inspect the last few rows of your data with the tail() command. Try the tail() command below in the Console:
 
 ```{r}
 tail(okcupid_profiles)
@@ -281,7 +281,7 @@ You can:
 Two of these approaches involve using the Source button, see Figure \@ref(fig:sourcebutton). You bring up the options for the Source button, illustrated in this figure, by clicking on the small arrow to the right of the word Source.
 
 ```{r sourcebutton, fig.cap = "Source button options", echo=FALSE, out.width="35%"}
-knitr::include_graphics("first_time/images/screenshot_source.png")
+knitr::include_graphics("ch_first_time/images/screenshot_source.png")
 ```
 
 ### Run select text
@@ -430,4 +430,17 @@ print(my_list$office_number)
 ## That's it!
 
 Congratulations! You've reached the end of the introduction to R. Take a break, have a cookie, and read some more about R tomorrow!
+
+
+```{block2, type='rmdcaution'}
+
+Here are some warnings.
+
+1. warning. asdfaslkj asdfl sadf. asdf.jasdf asd. asdfas.jdas.
+
+2. warning again
+
+3. last warning.
+
+```
 
