--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -99,7 +99,7 @@ A common problem in science is that after an article is published, the authors c
 
 Create a script in your R Studio project by using the menu File > New File > R Script.
 
-Save the file with an appropriate name using the File menu. A common, and good, convention for naming is to start all script names with the word "script" and separate words with an underscore. You might save this file with the name "script_my_first_one.R". The advantage of this approach is that when you look at your list of files alphabetically, all the script files will cluster together. Likewise, it's a good idea to save all data files such that they begin with "data_". This way all the data files will cluster together in your directory view as well. You can see there is already a data file with this convention called "data_okcupid_heights.csv". 
+Save the file with an appropriate name using the File menu. A common, and good, convention for naming is to start all script names with the word "script" and separate words with an underscore. You might save this file with the name "script_my_first_one.R". The advantage of this approach is that when you look at your list of files alphabetically, all the script files will cluster together. Likewise, it's a good idea to save all data files such that they begin with "data_". This way all the data files will cluster together in your directory view as well. You can see there is already a data file with this convention called "data_okcupid.csv". 
 
 You can see as discussed previously, we are trying to instill and effect workflow as you learn R. Using a good naming convention (that is consistent with what others use) is part of the workflow. When you write your scripts it's a good idea to follow the [tidyverse style guide](https://style.tidyverse.org).
 
@@ -179,10 +179,10 @@ Most importantly, running the library(tidyverse) prior to entering the rest of y
 
 ### Use read_csv (not read.csv) to open the file. 
 
-If you inspect the Files pane on the right of the screen you see the  **data_okcupid_heights.csv** data file in our project directory. We will load this data with the commands below. If you followed the steps above, you should have auto-complete for the tidyverse commands you type for now in -- in the current R session. Enter the command below into your script. Then highlight the text and click on the "Run" button.
+If you inspect the Files pane on the right of the screen you see the  **data_okcupid.csv** data file in our project directory. We will load this data with the commands below. If you followed the steps above, you should have auto-complete for the tidyverse commands you type for now in -- in the current R session. Enter the command below into your script. Then highlight the text and click on the "Run" button.
 
 ```{r firstread}
-okcupid_profiles <- read_csv(file = "data_okcupid_heights.csv")
+okcupid_profiles <- read_csv(file = "data_okcupid.csv")
 
 ```
 
@@ -322,7 +322,7 @@ The original format for representing a data set in R is the data frame. You will
 
 #### read.csv puts data into a data frame
 ```{r}
-my_dataframe <- read.csv(file = "data_okcupid_heights.csv")
+my_dataframe <- read.csv(file = "data_okcupid.csv")
 
 ```
 
@@ -343,7 +343,7 @@ Notice that when you print a tibble it DOES show you the number of rows and colu
 
 
 ```{r}
-my_tibble <- read_csv(file = "data_okcupid_heights.csv")
+my_tibble <- read_csv(file = "data_okcupid.csv")
 
 ```
 ```{r}
